--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -40,6 +40,10 @@
   &_hollow {
     background: transparent;
   }
+  &_hollow:hover {
+    box-shadow: 0 0 2px $primary;
+    border-color: $primary;
+  }
   &_icon,
   &_icon:hover {
     border-color: transparent;
