--- a/src/components/basket/basket.pug
+++ b/src/components/basket/basket.pug
@@ -12,14 +12,15 @@ mixin basket
                   |&nbsp;добавить товар по артикулу
             table.basket__tbl
               thead.basket__tbl-head
-                th(colspan="2").basket__tbl-cell
-                  |Товар
-                th.basket__tbl-cell
-                  |Цена
-                th.basket__tbl-cell
-                  |Количество
-                th(colspan="2").basket__tbl-cell
-                  |Сумма
+                tr.basket__tbl-row
+                  th(colspan="2").basket__tbl-cell
+                    |Товар
+                  th.basket__tbl-cell
+                    |Цена
+                  th.basket__tbl-cell
+                    |Количество
+                  th(colspan="2").basket__tbl-cell
+                    |Сумма
               tbody.basket__tbl-body
                 tr.basket__tbl-row
                   td.basket__tbl-cell
@@ -31,7 +32,7 @@ mixin basket
                       a(href="#") ze11003041
                   td.basket__tbl-cell 
                     |8 594,80 руб.
-                  td.basket__tbl-cell
+                  td.basket__tbl-cell.u--no-wrap
                       a(href="#").fa.fa-minus.product__qty-cntr
                       input.product__qty-num(type="text",value=1)
                       a(href="#").fa.fa-plus.product__qty-cntr
