--- a/src/components/partners/_partners.scss
+++ b/src/components/partners/_partners.scss
@@ -5,6 +5,9 @@
     flex: 1;
     justify-content: center;
     align-items: center;
+    @include max-screen(map-get($breakpoints, md)) {
+        margin-bottom: 1rem;
+    }
     &__title {
         font-size: 18px;
         color: $black;
