Fixed Сделать выплывающее меня для продукции и технической информации

--- a/src/components/menu/menu.pug
+++ b/src/components/menu/menu.pug
@@ -2,8 +2,20 @@ mixin menu
   -
     var menuItems = [
       {'title': 'Главная', 'url': '#'},
-      {'title': 'Продукция', 'url': '#'},
-      {'title': 'Техническая информация', 'url': '#'},
+      {'title': 'Продукция', 'url': '#','subMenu':[
+        {'title': 'Всплывающее меню', 'url': '#'},
+        {'title': 'для', 'url': '#'},
+        {'title': 'продукции', 'url': '#'},
+        {'title': 'и', 'url': '#'},
+        {'title': 'технической', 'url': '#'},
+        {'title': 'информации', 'url': '#', 'active': true}]},
+      {'title': 'Техническая информация', 'url': '#','subMenu':[
+        {'title': 'Всплывающее меню', 'url': '#'},
+        {'title': 'для', 'url': '#'},
+        {'title': 'продукции', 'url': '#'},
+        {'title': 'и', 'url': '#'},
+        {'title': 'технической', 'url': '#'},
+        {'title': 'информации', 'url': '#', 'active': true}]},
       {'title': 'Как купить', 'url': '#','subMenu':[
         {'title': 'Заказ', 'url': '#'},
         {'title': 'Оплата', 'url': '#'},
