--- a/src/components/menu/menu.pug
+++ b/src/components/menu/menu.pug
@@ -3,19 +3,12 @@ mixin menu
     var menuItems = [
       {'title': 'Главная', 'url': '#'},
       {'title': 'Продукция', 'url': '#','subMenu':[
-        {'title': 'Всплывающее меню', 'url': '#'},
-        {'title': 'для', 'url': '#'},
-        {'title': 'продукции', 'url': '#'},
-        {'title': 'и', 'url': '#'},
-        {'title': 'технической', 'url': '#'},
-        {'title': 'информации', 'url': '#', 'active': true}]},
+        {'title': 'пототолочные', 'url': '#'},
+        {'title': 'настенные', 'url': '#'}]},
       {'title': 'Техническая информация', 'url': '#','subMenu':[
-        {'title': 'Всплывающее меню', 'url': '#'},
-        {'title': 'для', 'url': '#'},
-        {'title': 'продукции', 'url': '#'},
-        {'title': 'и', 'url': '#'},
-        {'title': 'технической', 'url': '#'},
-        {'title': 'информации', 'url': '#', 'active': true}]},
+        {'title': 'комплектация', 'url': '#'},
+        {'title': 'управление', 'url': '#'},
+        {'title': 'и что-то еще сейчас не помню', 'url': '#'}]},
       {'title': 'Как купить', 'url': '#','subMenu':[
         {'title': 'Заказ', 'url': '#'},
         {'title': 'Оплата', 'url': '#'},
