--- a/src/components/related/_related.scss
+++ b/src/components/related/_related.scss
@@ -49,6 +49,7 @@
         border-radius: 50%;
         vertical-align: middle;
         line-height: 36px;
+        font-style: normal;
     }
     &__icon_num:after {
         border-color: $primary;
