--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -25,8 +25,10 @@
     color: $primary;
     background: linear-gradient(to bottom, $white 0%, $white 49%, $button-bg 50%);
   }
+
   &_primary:hover {
-    box-shadow: 0 0 2px $primary;
+    border-color: $primary;
+    box-shadow: 0 0 0 2px $primary;
   }
   &_text {
     border: none;
