Fixed  Product - Текст (220-240 В .......MAC 3) на голубой полосе под картинкой светильника нужно выровнять по высоте, по центру полосы.

--- a/src/components/product/_product.scss
+++ b/src/components/product/_product.scss
@@ -106,12 +106,15 @@
       }
       &__strip {
           font-size: 11px;
-          display: flex;
+          display: table;
+          width: 100%;
           background-color: $bg-strip;
-          padding: 7px 15px;
-          justify-content: space-between;
           line-height: 1;
-          align-content: center;
+          vertical-align: middle;
+      }
+      &__strip-itm {
+          display: table-cell;
+          padding: 7px 15px;
           vertical-align: middle;
       }
       &__gallery {
