--- a/src/components/pagination/_pagination.scss
+++ b/src/components/pagination/_pagination.scss
@@ -32,7 +32,7 @@
     vertical-align: middle;
   }
   &__item:hover {
-    box-shadow: 0 0 0 2px $black;
+    border-color: $primary;
   }
   &__item:hover>&__link {
     color: $primary;
