Fixed News Нажатые кнопки из подборки (я так понимаю что сейчас выбрана кнопка акции) должны иметь голубую рамку 2 px. (сейчас рамка кнопки акции имеет толщину 1 px)

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -13,11 +13,13 @@
   font-size: 1rem;
   font-weight: 400;
   &:hover {
-    box-shadow: 0 0 2px $black;
+    box-shadow: 0 0 0 2px $black;
     border-color: $black;
   }
-  &_active {
-    border: 1px solid $primary;
+  &_active,
+  &_active:hover {
+    box-shadow: none;
+    border: 2px solid $primary;
     color: $primary;
   }
   &_primary {
@@ -25,7 +27,6 @@
     color: $primary;
     background: linear-gradient(to bottom, $white 0%, $white 49%, $button-bg 50%);
   }
-
   &_primary:hover {
     border-color: $primary;
     box-shadow: 0 0 0 2px $primary;
