Fixed News Removed features Removed  "показать еще..."

--- a/src/pug/pages/news.pug
+++ b/src/pug/pages/news.pug
@@ -15,10 +15,8 @@ block content
   main.page__content
     +breadcrumbs
     +gallery
-    .u--vrt-md
-      +related
     .u--vrt-sm
-      +features
+      +related(true)
     .u--vrt-sm.grid__container
       .grid
         .grid__col-md-6
