--- a/src/components/related/related.pug
+++ b/src/components/related/related.pug
@@ -1,5 +1,5 @@
 include /components/availability/availability
-mixin related
+mixin related(noMore)
   .grid__container
     - var n=0;
     .related
@@ -35,11 +35,12 @@ mixin related
                   |6 052,36 руб.
                   a(href="#").related__button
                     i.icon-basket_circle-dark.related__icon.related__icon
-      a.related__footer(href="#")
-        .related__button
-          i.fa.fa-plus.related__footer-icon.related__icon
-        br
-        |Показать ещё 6 товаров
-        br
-        span.u--txt-thin
-          |Показано 6 из 100
+      if !noMore
+        a.related__footer(href="#")
+          .related__button
+            i.fa.fa-plus.related__footer-icon.related__icon
+          br
+          |Показать ещё 6 товаров
+          br
+          span.u--txt-thin
+            |Показано 6 из 100
