Fixed Basket В таблице нужно отцентровать заголовки "цена" и "количество" относительно содержимого

--- a/src/components/basket/_basket.scss
+++ b/src/components/basket/_basket.scss
@@ -45,6 +45,14 @@
       display: block;
     }
   }
+  &__tbl-cell_price,
+  &__tbl-cell_qty,
+  &__tbl-cell_summ {
+    text-align: center;
+    @include max-screen(map-get($breakpoints, md)) {
+      text-align: left;
+    }
+  }
   &__tbl-body &__tbl-cell {
     &:before {
       content: attr(data-th);
