--- a/src/components/search/search.pug
+++ b/src/components/search/search.pug
@@ -12,10 +12,10 @@ mixin search
                 input(type="text", placeholder="Поиск").form__input.form__input_icon.icon-search-dark.search__input.grid__col-md-12
                 .grid.grid--justify-end
                   .grid__col-md-3
-                    button(type="button").button.button_primary.button_hollow.search__button
+                    button(type="button").button.button_hollow.search__button
                       |&nbsp;Сбросить
                   .grid__col-md-3.grid__col--bleed-right
-                    button(type="button").button.button_primary.button_hollow.search__button
+                    button(type="button").button.button_hollow.search__button
                       |&nbsp;Найти
                 |Сортировать по 
                 select.form__select.search__select.icon-arrow-down
@@ -68,6 +68,6 @@ mixin search
               input(type="range",min="1",max="100",step="1")
             .grid.grid--justify-end
               .grid__col-md-7.grid__col--bleed
-                button(type="button").button.button_primary.button_hollow.search__button.grid--align-center
+                button(type="button").button.button_hollow.search__button.grid--align-center
                   |Подобрать
             
