Fixed, cheked IM Предлагаю сделать раскладку блоков со светильниками в три столбца,

--- a/src/components/search__im/search__im.pug
+++ b/src/components/search__im/search__im.pug
@@ -10,11 +10,11 @@ mixin search__im
         option(value="2") количество
       .im.grid
         while n < 10
-          li.grid__col-md-6
+          li.grid__col-md-4
             -n++
             .grid__cell.im__item
               .im__item-header.u--clearfix
-                span.im__id ze11003007
+                a(href="#").im__id ze11003007
                 if n>2
                   .im__button.im__button_tooltip
                     i.im__icon.im__icon_num 
