--- a/src/components/search__im/_search__im.scss
+++ b/src/components/search__im/_search__im.scss
@@ -18,7 +18,7 @@
     height: 100%;
     margin-bottom: 20px;
   }
-  [class*="grid__col-"]:nth-child(2n+1) {
+  [class*="grid__col-"]:nth-child(3n+1) {
     @include max-screen(map-get($breakpoints, md)) {
       padding-left: $reflex-cell-spacing;
     }
@@ -60,6 +60,7 @@
     border-radius: 50%;
     vertical-align: middle;
     line-height: 36px;
+    font-style: normal;
   }
   &__icon_num:after {
     border-color: $primary;
