Fixed Catalog Выделение активного размера (D100) сделать, чтобы линия огибала текст с выделенным размером. По умолчанию текст черный, активный текст черный, при наведении просто изменяется цвет текста.

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -20,6 +20,9 @@
   &__title_active,
   &__title_active:visited {
     border: 1px solid $primary;
+    color: $black;
+  }
+  &__title:hover {
     color: $primary;
   }
   &__body {}
