--- a/src/components/catalog/catalog.pug
+++ b/src/components/catalog/catalog.pug
@@ -60,7 +60,7 @@ mixin catalog
                   th.catalog__tbl-cell 
                 tbody.catalog__tbl-body
                   tr.catalog__tbl-row
-                    td(colspan="9").catalog__tbl-cell
+                    td(colspan="9").catalog__tbl-cell.u--txt-left
                       |без управления световым потоком
                   tr.catalog__tbl-row
                     td(data-th="Наименование:").catalog__tbl-cell
