--- a/src/components/utils/_utils.scss
+++ b/src/components/utils/_utils.scss
@@ -19,6 +19,9 @@
   &--vrt-md {
     margin-bottom: 60px;
   }
+  &--txt-left {
+    text-align: left;
+  }
   &--txt-center {
     text-align: center;
   }
