--- a/src/components/menu/_menu.scss
+++ b/src/components/menu/_menu.scss
@@ -9,7 +9,7 @@
     transition: all 0.7s ease;
     table-layout: fixed;
     @include max-screen(map-get($breakpoints, md)) {
-      display: flex;
+      display: block;
       max-height: 0;
       opacity: 0;
       position: absolute;
@@ -17,9 +17,9 @@
   }
   &__list_top-visible {
     @include max-screen(map-get($breakpoints, md)) {
-      display: flex;
+      display: block;
+      width: 100%;
       position: static;
-      flex-direction: column;
       max-height: 500px;
       opacity: 1;
     }
@@ -53,6 +53,10 @@
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
+    @include max-screen(map-get($breakpoints, md)) {
+      display: block;
+      width: 100%;
+    }
   }
   &__item_top:hover {
     cursor: pointer;
