--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -35,6 +35,7 @@
     background-color: $primary;
     border: none;
   }
+  &__textarea,
   &__input {
     border: 1px solid $black;
     border-radius: 3px;
@@ -43,6 +44,10 @@
     font-size: 11px;
     font-weight: 100;
     margin-bottom: 1rem;
+  }
+  &__input_full {
+    display: block;
+    width: 100%;
   }
   &__input_sm {
     display: inline-block;
